--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: 'Youth Crew'
 subtitle: ''
 description: ''
-keywords:
-author: John Doe
+keywords: 
+author: 雷打野
 language: en
 timezone: ''
 
